@@ -37,6 +37,9 @@ Version 1.5 (X/X/20X)
   * Fixed link insertion for NetNewsWire. (#11389)
   * Added Google Chrome support for link insertion.
 
+ Message View
+  * Added the "lastFocus" class for message styles to the latest message received while the chat didn't have focus.
+
  Transcript Viewer
  * Added next/previous buttons for highlighted search terms within a transcript (similar to Safari).
 
